# This file documents the revision history for Perl extension Catalyst.

5.7012
        - Fixed Engine::HTTP to use a proper SIGCHLD repear. Should fix issues with 
          system() calls returning -1 instead of the correct value. (Jon Schutz)

5.7011  2007-10-18 20:40:00
        - Allow multiple restart directories and added option to follow
          symlinks in the HTTP::Restarter engine (Sebastian Willert)
        - Fixed t/optional_http-server-restart.t so it actually tests
          if the server restarted or notified of an error (Sebastian Willert)
        - Return child PID from the HTTP engine when run with the 'background' option.
          (Emanuele Zeppieri)
        - Fixed bug in HTTP engine where writes could fail with
          'Resource temporarily unavailable'.
        - Fixed bug where %2b in query parameter is doubly decoded to ' ', instead of '+'
          (Gavin Henry, Tatsuhiko Miyagawa, Oleg Pronin)
        - Fixed bug where req->base and req->uri would include a port number when running
          in SSL mode.
        - Removed unnecessary sprintf in debug mode that caused warnings on locales where
          commas are used for decimal markers.
        - Improved error message for case when server picks up editor save
          files as module names. (James Mastros)

5.7010  2007-08-22 07:41:00
        - Resource forks in 5.7009

5.7009  2007-08-22 00:14:00
        - Moved Manual.pod to Manual.pm and clarified status of 
          Catalyst-Manual dist
        - Doc patches to Catalyst::Controller
        - remove ignore_loaded from plugin load, commenting why
        - document the ignore_loaded feature in Catalyst::Utils
        - Add testing of inline plugins.

5.7008  2007-08-13 08:40:00
        - Added $c->request->query_keywords for getting the keywords
          (a query string with no parameters).
        - Add undef warning for uri_for.
        - Fix bug where a nested component would be setup twice.